src/main/java/com/example/warsztat_samochodowy/error/CarAlreadyExistException.java
package com.example.warsztat_samochodowy.error;

public class CarAlreadyExistException extends RuntimeException {
    public CarAlreadyExistException(String message) {
        super(message);
    }
}
